[package]
name = "gotham-middleware-bb8"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
bb8 = { git = "https://github.com/khuey/bb8" }
bb8-postgres = { git = "https://github.com/khuey/bb8" }
futures = "0.1"
gotham = "0.2"
gotham_derive = "0.2"
log = "*"
tokio-core = "*"

[dev-dependencies]
env_logger = "0.5.7"
futures-state-stream = "*"
hyper = "*"
mime = "*"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres" }
